realigned cards .. deleted service background .. fixed modal issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,5 @@
     padding:0;
 }
 
-body {
- background-color: grey;
-}
 
 
