--- a/client/src/pages/LandingPage/Services.css
+++ b/client/src/pages/LandingPage/Services.css
@@ -1,9 +1,7 @@
 .backgroundDiv2 {
-    background: 
-    /* linear-gradient(
-      rgba(0, 0, 0, 0.5), 
-      rgba(0, 0, 0, 0.5)
-    ), */
-    url(../images/makingBed.jpg);
+    /* background: 
+
+    url(../images/makingBed.jpg); */
 
 }
+
